[tool.poetry]
name = "electronics-store"
version = "0.1.0"
description = ""
authors = ["Eisiehame <knurov24@gmail.com>"]
readme = "README.md"
packages = [{include = "electronics_store"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
